# lunch-list

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: dockerpublish.yml  rust.yml
lunch-list-backend/: Cargo.toml
lunch-list-backend/src/: errors.rs  lib.rs  main.rs
lunch-list-backend/src/auth/: claims.rs  login.rs  logout.rs  mod.rs  routes.rs  signup.rs
lunch-list-backend/src/list/: list_model.rs  list_query.rs  list_type.rs  mod.rs  routes.rs
lunch-list-backend/src/user/: login.rs  mod.rs  routes.rs
lunch-list-frontend/: Cargo.toml  build.rs  deploy.sh  index.html  main.js
lunch-list-frontend/src/: api.rs  app.rs  lib.rs  lists.rs  login.rs  main.rs  models.rs  routes.rs  styles.scss  token_agent.rs
lunch-list-frontend/src/components/: app.rs  list.rs  lists.rs  login.rs  mod.rs
lunch-list-frontend/static/: index.html  style.css  styles.css
src/: auth.rs  errors.rs  lib.rs  main.rs
src/list/: list_model.rs  list_type.rs  mod.rs  routes.rs
src/user/: claims.rs  login.rs  mod.rs  routes.rs
