[package]
name = "lunch-list"
version = "0.1.0"
authors = ["Olav de Haas <https://github.com/Olavhaasie>"]
edition = "2018"

description = "fast and simple web lunch attendance list"
repository = "https://github.com/Olavhaasie/lunch-list"

license = "Apache-2.0"
readme = "README.md"

keywords = ["webapp", "webserver", "actix", "redis"]

[[bin]]
name = "ll"
path = "src/main.rs"

[dependencies]
actix-web = "2"
actix-rt = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
failure = "0.1"
log = "0.4"
r2d2_redis = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

