[package]
name = "lunch-list-frontend"
version = "0.1.0"
authors = ["Olav de Haas <https://github.com/Olavhaasie>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee-alloc"]

wee-alloc = ["wee_alloc"]

[dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = "0.3"
wee_alloc = { version = "0.4", optional = true }
yew = { version = "0.14.0", features = ["web_sys"] }
yew-router = { version = "0.11", features = ["web_sys"] }

