[package]
name = "lunch-list-frontend"
version = "0.1.0"
authors = ["Olav de Haas <https://github.com/Olavhaasie>"]
description = "lunch-list client web app written using WebAssembly and Yew"
edition = "2018"

repository = "https://github.com/Olavhaasie/lunch-list"
license = "Apache-2.0"

build = "build.rs"

publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee-alloc"]

wee-alloc = ["wee_alloc"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
wee_alloc = { version = "0.4", optional = true }
yew = "0.17"
yew-router = "0.14"

[build-dependencies]
sass-rs = "0.2"
